# semantic_faq_assistant

./: .gitignore  .pre-commit-config.yaml  EVALUATION.md  Feedback - Challenge tehnic - Raul.docx  README.md  docker-compose.yml  todos.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agent.py  build_rag.py  celery_app.py  main.py  message_store.py  pyproject.toml  requirements.txt  schemas.py  settings.py  similarity_search.py
backend/app/: agent.py  api.py  auth.py  celery_app.py  schemas.py  settings.py  similarity_search.py
backend/app/repos/: database.py  message_store.py  models.py  session_repository.py  user_repository.py
backend/app/tasks/: embed_task.py
backend/app/utils/: logging_config.py
backend/repos/: message_store.py  session_repository.py
backend/tasks/: embed_task.py
backend/utils/: logging_config.py
data/: knowledge_base.json
db/: init.sql
frontend/: .gitignore  Dockerfile  docker-entrypoint.sh  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx  theme.js
