[project]
name = "semantic-fqa-backend"
requires-python = "==3.12.*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: Depends() in defaults is idiomatic FastAPI

[tool.ruff.lint.isort]
known-first-party = ["agent", "celery_app", "logging_config", "main", "repos", "schemas", "settings", "similarity_search", "tasks", "utils"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["agent", "celery_app", "logging_config", "main", "repos", "schemas", "settings", "similarity_search", "tasks", "utils"]
